--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -53,7 +53,7 @@
     </div>
 
     <div class="form-group">
-      <%= f.label :attachments,'上傳附件' %>
+      <%= f.label :attachments, '上傳附件' %>
       <%= f.file_field :attachments, multiple: true %>
     </div>
 
@@ -68,11 +68,16 @@
     <tr>
       <td style="padding-right:20px;"><%= teachingfile.name %></td>
       <td style="padding-right:20px;">
-        <% teachingfile.attachments.each do |file| %>
+        <% teachingfile.attachments.each_with_index do |file, index| %>
+        <div>
           <%= link_to file.url do %>
+            <%= fa_icon 'download 2x', class: 'theme-font' %>
             <%= file.file.filename %>
-            <%= fa_icon 'download 2x', class: 'theme-font' %><br>
           <% end %>
+          <%= link_to user_plan_attachment_path(@teachingfile, index), :method => :delete, data: { confirm: "Are you sure you want to delete this image?" } do %>
+            <%= fa_icon 'trash', style: 'color: red;'%>
+          <% end %>
+        </div>
         <% end %>
       </td>
 
