--- a/app/views/teachingfiles/edit.html.erb
+++ b/app/views/teachingfiles/edit.html.erb
@@ -9,11 +9,17 @@
       <div class="form-group">
         <%= f.label :attachments, '上傳附件' %>
         <%= f.file_field :attachments, multiple: true %><br>
-        <%= '【現有檔案：'+ @teachingfile.attachment.file.filename+'】' if @teachingfile.attachment? %>
+        <hr>
+        <h5>【現有檔案】：</h5>
+        <ol>
+          <% @teachingfile.attachments.each do |file| %>
+            <li><%= file.file.filename if @teachingfile.attachments? %></li>
+          <% end %>
+        </ol>
       </div>
 
-      <%= f.submit '更新', class:"btn btn-primary" %>
-      <%= link_to '返回',user_plan_path(@user,@plan),class:"btn btn-success"  %>
+      <%= f.submit '更新', class: "btn btn-primary" %>
+      <%= link_to '返回', user_plan_path(@user,@plan),class: "btn btn-success"  %>
     <% end %>
 
   <% elsif params[:material_id] %>
@@ -26,7 +32,18 @@
       <div class="form-group">
         <%= f.label :attachments, '上傳附件' %>
         <%= f.file_field :attachments, multiple: true %><br>
-        <%= '【現有檔案：'+ @teachingfile.attachment.file.filename+'】' if @teachingfile.attachment? %>
+        <h5>【現有檔案】：</h5>
+        <ol>
+          <% @teachingfile.attachments.each do |file| %>
+            <li><%= file.file.filename if @teachingfile.attachments? %></li>
+          <% end %>
+        </ol>
+      </div>
+
+
+      <div class="form-group">
+        <%= f.check_box :remove_attachments %>
+        <%= f.label 'Remove attachments' %>
       </div>
 
       <%= f.submit '更新',  class:"btn btn-primary" %>
