--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,48 +1,74 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container user-profile-navtab">
+  <div class="row">
+    <div class="col-md-12">
+      <h2 class="text-center">編輯個人資料</h2>
+      <hr>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+      <ul class="nav nav-tabs">
+        <li class="nav-item">
+          <%= link_to '個人資料',edit_user_path(current_user), class: "nav-link tab-link"%>
+        </li> 
+
+        <li class="nav-item">
+          <%= link_to '變更密碼',edit_user_registration_path, class: "nav-link active"%>
+        </li> 
+
+      </ul>
+    </div>
+  </div>
   
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name, autofocus: true %>
+  <div class="row justify-content-md-center user-profile-grid">
+    <div class="devise-panel col-md-6">
+    
+      <h1>更改 <%= resource_name.to_s.humanize %> 密碼</h1><br>
+
+      <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+        <%= devise_error_messages! %>
+        
+        <div class="field">
+          <%= f.label :email, '電子信箱' %><br />
+          <%= f.email_field :email, autocomplete: "email", class: "form-control" %>
+        </div><br>
+
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+        <% end %>
+
+        <div class="field">
+          <%= f.label :password, "密碼" %> <i>(不想更換空白即可)</i><br />
+          <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
+          <% if @minimum_password_length %>
+            <br />
+            <em>至少需 <%= @minimum_password_length %> 個字元</em>
+          <% end %>
+        </div>
+
+        <div class="field">
+          <%= f.label :password_confirmation, '再次輸入密碼確認' %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
+        </div><br>
+
+        <div class="field">
+          <%= f.label :current_password, '現在使用密碼' %> <i>(需要你的現行密碼確認變更)</i><br />
+          <%= f.password_field :current_password, autocomplete: "current-password", class: "form-control" %>
+        </div>
+        
+        <br>
+        <div class="actions">
+          <%= f.submit "Update", class: 'btn btn-outline-dark' %>
+        </div>
+      <% end %>
+      
+      <br>
+      <hr>
+      
+      <div class="pull-right">
+        <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger btn-lg' %></p>
+      </div>
+
+      <%= link_to " ← Back", :back, style: 'color: white;' %>
+      
+    
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autocomplete: "email" %>
-  </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
