--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
   <body>
     <%= render partial: "shared/navbar" %>
     <div class="nav_margin"></div>
-    <div class="container-fluid">
+    <div class="container">
 
       <%= render partial: "shared/alert" %>
 
