--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -1,1 +1,54 @@
-<h1>Here is the lessons#index</h1>
+<div class="container-fluid">
+  <div class="row">
+    <h1>Here is the lessons#index</h1>
+    <div class="col-md-8">
+      <%= link_to '新增課表' %> | <%= link_to '新增待辦事項', new_user_todo_path(@user) %>
+      <hr>
+      <%= week_calendar events: @lessons do |date, lessons| %>
+        <% 8.upto(18).each do |hour| %>
+          <div id="hour-<%= hour %>" class="day_time text-center">
+            <% lessons.each do |lesson| %>
+              <%- if lesson.start_time.hour.between?(hour, hour + 0.9) %>
+                <%= link_to user_lesson_path(@user, lesson) do %>
+                  <div><%= lesson.topic.name %></div>
+                  <div><%= lesson.name %></div>
+                  <div><%= lesson.classroom %></div>
+                <% end %>
+              <% end -%>
+            <% end %>
+          </div>
+        <% end %>
+      <% end %>
+    </div>
+
+    <div class="col-md-4 daily-todo">
+      <div>
+        <%= month_calendar do |date| %>
+          <%= date.day %>
+        <% end %>
+      </div>
+
+      <div>
+        <div class="">
+            <%# 客制化各項需以逗號分開 %>
+            <%= calendar partial: 'simple_calendar/to_do_list_v2', number_of_days: 1, events: @todos do |date, todos| %>
+              <% 8.upto(18).each do |hour| %>
+                <div class="day_time">
+                    <%= Time.parse("#{hour}:00").strftime("%l %P") %>
+                    <span id="hour-<%= hour %>" class="text-center">
+                      <% todos.each do |todo| %>
+                        <%- if todo.start_time.hour.between?(hour, hour + 0.9) %>
+                          <%= link_to user_lesson_path(@user, todo) do %>
+                            <%= todo.name %>
+                          <% end %>
+                        <% end -%>
+                      <% end %>
+                    </span>
+                </div>
+              <% end %>
+            <% end %>
+      </div>
+    </div>
+    
+  </div>
+</div>
