--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -4,21 +4,23 @@
     <div class="col-md-8">
       <%= link_to '新增課表' %> | <%= link_to '新增待辦事項', new_user_todo_path(@user) %>
       <hr>
-      <%= week_calendar events: @lessons do |date, lessons| %>
-        <% 8.upto(18).each do |hour| %>
-          <div id="hour-<%= hour %>" class="day_time text-center">
-            <% lessons.each do |lesson| %>
-              <%- if lesson.start_time.hour.between?(hour, hour + 0.9) %>
-                <%= link_to user_lesson_path(@user, lesson) do %>
-                  <div><%= lesson.topic.name %></div>
-                  <div><%= lesson.name %></div>
-                  <div><%= lesson.classroom %></div>
-                <% end %>
-              <% end -%>
-            <% end %>
-          </div>
+      <div class="time_table">
+        <%= week_calendar events: @lessons do |date, lessons| %>
+          <% 8.upto(18).each do |hour| %>
+            <div id="hour-<%= hour %>" class="day_time text-center">
+              <% lessons.each do |lesson| %>
+                <%- if lesson.start_time.hour.between?(hour, hour + 0.9) %>
+                  <%= link_to user_lesson_path(@user, lesson) do %>
+                    <div><%#= lesson.topic.name %></div>
+                    <div><%= lesson.name %></div>
+                    <div><%= lesson.classroom %></div>
+                  <% end %>
+                <% end -%>
+              <% end %>
+            </div>
+          <% end %>
         <% end %>
-      <% end %>
+      </div>
     </div>
 
     <div class="col-md-4 daily-todo">
