--- a/app/views/simple_calendar/_to_do_list_v2.html.erb
+++ b/app/views/simple_calendar/_to_do_list_v2.html.erb
@@ -1,7 +1,7 @@
 <div class="simple-calendar">
   <div class="calendar-heading text-center">
     <%= link_to t('simple_calendar.previous', default: 'Prev'), calendar.url_for_previous_view %>
-    <span class="calendar-title"><%= start_date.month %> - <%= start_date.day %> 待辦事項</span>
+    <span class="calendar-title"><%= start_date.month %> / <%= start_date.day %> 待辦事項</span>
     <%= link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view %>
   </div>
 
