can't destroy a todo

--- a/app/views/todos/edit.html.erb
+++ b/app/views/todos/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', todo: @todo %>
 
-<%= link_to 'Show', @todo %> |
+<%= link_to 'Show', user_todo_path(@user, @todo) %> |
 <%= link_to 'Back', root_path %>
