--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -40,7 +40,7 @@
                     <span id="hour-<%= hour %>" class="text-center">
                       <% todos.each do |todo| %>
                         <%- if todo.start_time.hour.between?(hour, hour + 0.9) %>
-                          <%= link_to user_lesson_path(@user, todo) do %>
+                          <%= link_to user_todo_path(@user, todo) do %>
                             <%= todo.name %>
                           <% end %>
                         <% end -%>
