--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -13,7 +13,7 @@
                   <%= link_to user_lesson_path(@user, lesson) do %>
                     <div><%#= lesson.topic.name %></div>
                     <div><%= lesson.name %></div>
-                    <div><%= lesson.classroom %></div>
+                    <div><%= lesson.class_name %></div>
                   <% end %>
                 <% end -%>
               <% end %>
